Fix #4509:  Line spacing in bulleted lists seems to be different from line spacing in standard text (#4535)
* Fixed issue #4507

* Fixed remaining issues

* Migrated changes to oppia

* Corrected css issue with classes

* Edited selector issue and priview line-spacing

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -2169,8 +2169,8 @@ pre.oppia-pre-wrapped-text {
     the same line-height, margin-top and margin-bottom attributes)
 */
 .oppia-rte-editor > p,
-.form-control.oppia-rte-content > div > p {
-  line-height: 28px;
+.oppia-rte-content > div > p {
+  line-height: 1.5;
   margin-bottom: 18px;
   margin-top: 18px;
 }
